Display showmore only on mobile. Fix input group btn styling

--- a/shared/scss/components/ckan/input.scss
+++ b/shared/scss/components/ckan/input.scss
@@ -33,3 +33,9 @@ label.checkbox {
     position: absolute;
   }
 }
+
+.input-group {
+  .input-group-btn .btn {
+    height: $input-height-base;
+  }
+}
